opam-version: "2.0"
authors: "Khoa Nguyen"
homepage: "https://github.com/thangngoc89/ocaml-slug"
maintainer: "hi@khoanguyen.me"
dev-repo: "git+ssh://git@github.com:thangngoc89/ocaml-slug.git"
bug-reports: "https://github.com/thangngoc89/ocaml-slug/issues"
license: "MIT"
build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "dune"
  "fpath"
]
